Style start page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guee the number</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        
+        <div class="pic-numbers">
+            <img src="images/numbers.png" alt="numbers">
+        </div>
+        <div class="main-wrapper">
+            <h1>Spėkite skaičių tarp 1 ir 100</h1>
+            <input id="number" type="text" placeholder="pvz., 100">
+            <label for="number">įveskite skaičių nuo 1 iki 100</label>
+            <button>Spėti</button>
+        </div>
     </div>
 
 
