Style victory block

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
 
         <div class="victory">
+            <img src="images/Victory-face.png" alt="victory">
             <h2>Atspėjote !</h2>
             <p>Atspėti jums pavyko iš <span id="shot"></span> !</p>
             <button class="new-game">Žaisti iš naujo</button>
