Cache DOM elements and implement full guess-feedback flow

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="tip">
                     <h2>Deja, Neatspėjote!</h2>
                     <p id="higher">Spėkite<span> Didesnį </span>skaičių.</p>
-                    <!-- <p id="lower">Spėkite<span> Mažesnį </span>skaičių.</p> -->
+                    <p id="lower">Spėkite<span> Mažesnį </span>skaičių.</p>
                 </div>
             </div>
 
